# AsymBench

./: LICENSE  README.md  pyproject.toml  requirements.txt
asymbench/core/: benchmark_runner.py  experiment.py  gnn_experiment.py  result_aggregator.py
asymbench/data/: loader.py  splitter.py
asymbench/evaluation/: metrics.py  statistics.py
asymbench/explainability/: gnn_explainer.py  shap_explainer.py
asymbench/gnn/: __init__.py  base.py  dataset.py  featurizer.py  model.py  reaction_graph.py  trainer.py
asymbench/gnn/architectures/: __init__.py  gat.py  gcn.py  gin.py
asymbench/models/: base.py  gnn_model.py
asymbench/optimization/: base.py  optuna_optimizer.py
asymbench/preprocessing/: feature_preprocessor.py  targets_scaler.py
asymbench/reporting/: report.py
asymbench/representations/: __init__.py  base.py  base_featurizer.py  circus.py  descriptors.py  df_lookup.py  fingerprints.py  graph.py  hf_transformer.py  lookup.py  mol_descriptors.py  morgan_fp.py  precomputed.py  transformers.py  unimol.py
asymbench/utils/: feature_names.py  run_paths.py  run_store.py
asymbench/visualization/: distributions.py  gnn_beeswarm.py  heatplot.py  parity.py
benchmarks/: benchmark_config.yaml  external_config.yaml  run_benchmark.py
benchmarks/DAAA_abs/: benchmark_config.yaml  external_config.yaml
benchmarks/Hong_CH/: benchmark_config.yaml
benchmarks/Hydrogenation/: benchmark_config.yaml
data/DAAA/: DAAA.csv  features_simple.csv  test_DAAA.csv
data/Denmark_NS_acetal/: N_S_acetal.csv
data/Hong_CH_activation/: CH_features.csv  Hong_NatSyn.csv
data/hydrogenation/: Sunoj_PNAS.csv  features.csv
tests/: test_lookup_representation.py  test_rep_name.py
