[project]
name = "asymbench"
version = "0.1.0"
description = "Benchmarking framework for molecular representations and ML models in asymmetric reaction prediction."
authors = [
    {name = "Eduardo Aguilar",email = "ed.aguilar.bejarano@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "rdkit (>=2025.9.4,<2026.0.0)",
    "optuna (>=4.7.0,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "doptools (>=1.3.9,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
